--- a/blog/templates/Post/create_post.html
+++ b/blog/templates/Post/create_post.html
@@ -1,28 +1,64 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+
+
 {% block title %}
     Create Post
 {% endblock title %}
 
+{% block style %}
+        <style>
+            header.masthead {
+                position: relative;
+                margin-bottom: 3rem;
+                padding-top: calc(8rem + 57px);
+                padding-bottom: 8rem;
+                background: no-repeat center center;
+                background-color: #6c757d;
+                background-size: cover;
+                background-attachment: scroll;
+                background-image: url("{% static 'assets/img/create_post.png' %}");
+                }
+            .reduced{
+                border-radius: 10px;
+                font-size: 25px;
+            }
+
+        </style>
+{% endblock style %}
+
 {% block content %}
-        <main class="mb-4">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Write a new Post</p>
-                        <div class="my-5">
-                            <form id="contactForm" action="" method="post" enctype="multipart/form-data" >
-                                {% csrf_token %}
-                                
-                                {{ form.as_p}}
-                                <br />
-                                <input class="btn btn-primary text-uppercase" id="submitButton" type="submit" value="Send">
-                            </form>
-                        </div>
-                    </div>
-                </div> 
+
+<header class="header_bg masthead ">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="site-heading">
+                    <h1>Write New Post</h1>
+                </div>
             </div>
-        </main>
+        </div>
+    </div>
+</header>
+
+<main class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="my-5">
+                    <form id="contactForm" action="" method="post" enctype="multipart/form-data" >
+                        {% csrf_token %}
+                        
+                        {{ form.as_p}}
+                        <br />
+                        <input class="btn btn-primary text-uppercase" id="submitButton" type="submit" value="Send">
+                    </form>
+                </div>
+            </div>
+        </div> 
+    </div>
+</main>
 
 {% endblock %}
