--- a/blog/templates/Post/home.html
+++ b/blog/templates/Post/home.html
@@ -19,6 +19,20 @@
                 background-attachment: scroll;
                 background-image: url("{% static 'assets/img/home-bg.jpg' %}");
                 }
+            .reduced{
+                border-radius: 10px;
+                font-size: 25px;
+            }
+            .tags{
+                font-size: 15px;
+                padding: 5px 8px;
+                margin: 1px 2px ;
+                border-radius: 12px;
+                text-transform: lowercase;
+                background-color: #e91e63;
+                color:#fff;
+            }
+
         </style>
 {% endblock style %}
 
@@ -42,12 +56,21 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <!-- Post preview-->
+            {% if posts %}
                 {% for post in posts %}
                     <div class="post-preview">
                         <a href="{%url 'single_post' post.id%}">
                             <h2 class="post-title">{{post.title}}</h2>
                             <h3 class="post-subtitle">{{post.body|truncatechars:100}}</h3>
                         </a>
+                        
+                        {% for tag in post.tags.all %}
+                        <span class="tags">
+                            <a class="tags" href="{% url 'show_cat_posts' tag %}">
+                                {{ tag }}
+                            </a>
+                        </span>
+                        {% endfor %}
                         <p class="post-meta">
                             Posted by 
                             <a href="#!">{{ post.writer}}</a>
@@ -60,6 +83,12 @@
                 {% endfor %}
                 <!-- Pager-->
                 <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+            {% else %}
+                <div style="height: 500px; ">
+                    <a href="{% url 'create_post' %}" class="btn btn-success reduced">Create Post</a>
+                </div>
+            {% endif %}
+
             </div>
         </div>
     </div>
