--- a/blog/templates/Post/post.html
+++ b/blog/templates/Post/post.html
@@ -2,56 +2,163 @@
 {% load static %}
 
 {% block title %}
-    {{post.title}}
+    {{ post.title }}
 {% endblock title %}
 
-
 {% block style %}
-        <style>
-            header.masthead {
-                position: relative;
-                margin-bottom: 3rem;
-                padding-top: calc(8rem + 57px);
-                padding-bottom: 8rem;
-                background: no-repeat center center;
-                background-color: #6c757d;
-                background-size: cover;
-                background-attachment: scroll;
-                background-image: url("{{post.image.url}}");
-                }
-        </style>
+<style>
+    header.masthead {
+        position: relative;
+        margin-bottom: 3rem;
+        padding-top: calc(8rem + 72px); /* Increased padding for a better top space */
+        padding-bottom: 6rem; /* Reduced bottom padding for a more balanced layout */
+        background: no-repeat center center;
+        background-color: #6c757d;
+        background-size: cover;
+        background-attachment: scroll;
+        background-image: url("{{ post.image.url }}");
+    }
+
+    .post-heading h1 {
+        font-size: 3.5rem;
+        line-height: 1.2;
+        font-weight: 700;
+        margin-bottom: 1rem;
+        color: #fff;
+    }
+
+    .subheading {
+        font-weight: 500;
+        color: #f8f9fa;
+    }
+
+    .meta {
+        font-size: 0.9rem;
+        color: #f8f9fa;
+    }
+
+    .text-justify {
+        text-align: justify;
+        padding: 0 1rem; /* Add padding to both sides for better readability */
+    }
+
+    .comment.card {
+        border: none;
+        background-color: #f8f9fa;
+    }
+
+    .comment.card .card-body {
+        padding: 1.5rem;
+    }
+
+    .comment.card.mb-3 {
+        margin-bottom: 1rem;
+    }
+
+    .alert-info {
+        background-color: #d1ecf1;
+        border-color: #bee5eb;
+        color: #0c5460;
+    }
+
+    .comment-form {
+        margin-top: 2rem;
+    }
+
+    .comment-form .btn-primary {
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+    .update-button,
+    .delete-button {
+        margin-top: 10px;
+        margin-right: 10px;
+        display: inline-block;
+    }
+    select#id_post {
+        border-radius: 5px;
+        border: none;
+        border: 1px solid #555;
+    }
+    .tags{
+        font-size: 18px;
+        padding: 5px 9px;
+        border-radius: 12px;
+        margin: 1px 4px;
+        text-transform: lowercase;
+        background-color: #e91e63;
+        color:#fff;
+        }
+
+</style>
 {% endblock style %}
 
 {% block content %}
+<header class="header_bg masthead">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="post-heading">
+                    <h1>{{ post.title }}</h1>
+                    <h2 class="subheading">{{ post.created }}</h2>
+                    <span class="meta">
+                        Posted by
+                        <a href="#!">{{ post.writer }}</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-    <header class="header_bg masthead">
-        <div class="container position-relative px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="post-heading">
-                        <h1>{{post.title}}</h1>
-                        <h2 class="subheading">{{ post.created }}</h2>
-                        <span class="meta">
-                            Posted by
-                            <a href="#!">{{ post.writer }}</a>
-                        </span>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 text-justify">
+            {% for tag in post.tags.all %}
+                <span class="tags">
+                    <a class="tags" href="{% url 'show_cat_posts' tag %}">
+                        {{ tag }}
+                    </a>
+                </span>
+                {% endfor %}
+            {{ post.body | linebreaks }}
+            <div class="update-button Reduced">
+                <a href="{% url 'update_post' post.id %}" class="btn btn-success" style="border-radius: 10px;">Update</a>
+            </div>
+            <div class="delete-button">
+                <form action="{% url 'delete_post' post.id %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-danger" type="submit" value="Delete" style="border-radius: 10px;"/>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10 offset-md-1">
+                <div class="comment-form">
+                    <h3>Comments:</h3>
+                    <hr>
+                    {% if comments %}
+                    {% for comment in comments %}
+                    <div class="comment card mb-3">
+                        <div class="card-body">
+                            {{ comment }}
+                        </div>
                     </div>
+                    {% endfor %}
+                    {% else %}
+                    <div class="alert alert-info mt-3">
+                        No Comments Yet
+                    </div>
+                    {% endif %}
                 </div>
+                <hr>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input class="btn btn-primary text-uppercase" type="submit" value="Send" style="border-radius: 5px;">
+                </form>
             </div>
         </div>
-    </header>
-    
-    <article class="mb-4">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    {{ post.body |linebreaks }}
-                </div>
-            </div>
-        </div>
-    </article>
+    </div>
 </div>
-
-
-<form action=""></form>
-    {% endblock %}
+{% endblock %}
