--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,12 @@
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         {% block style %}  {% endblock style %}
+        <style>
+            .navbar{
+                position: fixed;
+                background-color: black;
+            }
+        </style>
     </head>
     <body>
         
