--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,6 +11,7 @@
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'home' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'create_post' %}">Create Post</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'categorys' %}">Categorys</a></li>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'userprofile' %}">profile</a></li>
             </ul>
         </div>
     </div>
