add login login_required decorator

--- a/blog/templates/Post/home.html
+++ b/blog/templates/Post/home.html
@@ -73,7 +73,7 @@
                         {% endfor %}
                         <p class="post-meta">
                             Posted by 
-                            <a href="#!">{{ post.writer}}</a>
+                            <a href="#!">{{ post.owner}}</a>
                             {{ post.created }}
                         </p>
                     </div>
