edit and optimize the code

--- a/blog/templates/Post/cat_post.html
+++ b/blog/templates/Post/cat_post.html
@@ -16,7 +16,7 @@
         background-color: #6c757d;
         background-size: cover;
         background-attachment: scroll;
-        background-image: url("{% static 'assets/img/categorys.jpg' %}");
+        background-image: url("{% static 'assets/img/category.jpg' %}");
     }
     .tags{
         font-size: 18px;
