--- a/blog/templates/Post/category.html
+++ b/blog/templates/Post/category.html
@@ -16,7 +16,7 @@
         background-color: #6c757d;
         background-size: cover;
         background-attachment: scroll;
-        background-image: url("{% static 'assets/img/categorys.jpg' %}");
+        background-image: url("{% static 'assets/img/category.jpg' %}");
     }
 
     .tags{
@@ -41,7 +41,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>Categorys</h1>
+                    <h1>categories</h1>
                 </div>
             </div>
         </div>
