--- a/blog/templates/Post/cat_post.html
+++ b/blog/templates/Post/cat_post.html
@@ -18,15 +18,7 @@
         background-attachment: scroll;
         background-image: url("{% static 'assets/img/category.jpg' %}");
     }
-    .tags{
-        font-size: 18px;
-        padding: 5px 9px;
-        border-radius: 12px;
-        margin: 1px 4px;
-        text-transform: lowercase;
-        background-color: #e91e63;
-        color:#fff;
-        }
+ 
 </style>
 {% endblock style %}
 
@@ -57,11 +49,11 @@
                     </a>
                     
                     {% for tag in post.tags.all %}
-                    <span class="tags">
-                        <a class="tags" href="{% url 'show_cat_posts' tag %}">
-                            {{ tag }}
+                    <h4 style="display: inline;">
+                        <a class="badge badge-secondary" href="{% url 'show_cat_posts' tag %}">
+                            {{ tag.name }}
                         </a>
-                    </span>
+                    </h4>
                     {% endfor %}
                     <p class="post-meta">
                         Posted by 
@@ -71,9 +63,6 @@
                 </div>
                 <!-- Divider-->
                 <hr class="my-4" />
-                <!-- Pager-->
-                <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
-
             {% endfor %}
         {% else %}
             <div style="height: 500px; ">
