--- a/blog/templates/Post/home.html
+++ b/blog/templates/Post/home.html
@@ -65,11 +65,11 @@
                         </a>
                         
                         {% for tag in post.tags.all %}
-                        <span class="tags">
-                            <a class="tags" href="{% url 'show_cat_posts' tag %}">
-                                {{ tag }}
+                        <h4 style="display: inline;">
+                            <a class="badge badge-secondary" href="{% url 'show_cat_posts' tag %}">
+                                {{ tag.name }}
                             </a>
-                        </span>
+                        </h4>
                         {% endfor %}
                         <p class="post-meta">
                             Posted by 
@@ -82,7 +82,35 @@
                     
                 {% endfor %}
                 <!-- Pager-->
-                <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+                <div class="pagination justify-content-center">
+                    <ul class="pagination">
+                        {% if posts.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page=1">&laquo; first</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ posts.previous_page_number }}">previous</a>
+                            </li>
+                        {% endif %}
+                
+                        <li class="page-item disabled">
+                            <span class="page-link">
+                                Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+                            </span>
+                        </li>
+                
+                        {% if posts.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ posts.next_page_number }}">next</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ posts.paginator.num_pages }}">last &raquo;</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+                
+
             {% else %}
                 <div style="height: 500px; ">
                     <a href="{% url 'create_post' %}" class="btn btn-success reduced">Create Post</a>
