--- a/blog/templates/Post/post.html
+++ b/blog/templates/Post/post.html
@@ -80,15 +80,7 @@
         border: none;
         border: 1px solid #555;
     }
-    .tags{
-        font-size: 18px;
-        padding: 5px 9px;
-        border-radius: 12px;
-        margin: 1px 4px;
-        text-transform: lowercase;
-        background-color: #e91e63;
-        color:#fff;
-        }
+ 
 
 </style>
 {% endblock style %}
@@ -115,11 +107,11 @@
     <div class="row">
         <div class="col-md-6 text-justify">
             {% for tag in post.tags.all %}
-                <span class="tags">
-                    <a class="tags" href="{% url 'show_cat_posts' tag %}">
-                        {{ tag }}
+                <h4 style="display: inline;">
+                    <a class="badge badge-secondary" href="{% url 'show_cat_posts' tag %}">
+                        {{ tag.name }}
                     </a>
-                </span>
+                </h4>
                 {% endfor %}
             {{ post.body | linebreaks }}
             <div class="update-button Reduced">
